Résolution du Bogue n° 0002271 Ajout du champ mot de passe actuel et vérification

--- a/src/Sesile/UserBundle/Resources/views/Profile/edit_content.html.twig
+++ b/src/Sesile/UserBundle/Resources/views/Profile/edit_content.html.twig
@@ -27,6 +27,12 @@
 </div>
 <br/>
 
+<div class="label_form label-form-input">
+    {{ form_label(form.password) }}
+    {{ form_widget(form.password) }}
+</div>
+<br/>
+
 {% for passwordField in form.plainPassword %}
     <div class="label_form label-form-input">
         {% if loop.index  != 1 %}
