Résolution du bogue n° 0002316. Création d'un élément de communcation par mail à l'ensemble des utilisateurs de l'instance.

--- a/src/Sesile/MainBundle/Resources/views/Default/menu.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Default/menu.html.twig
@@ -146,6 +146,14 @@
                     </a>
                 </li>
             {% endif %}
+            {% if is_granted('ROLE_AGENT_SICTIAM') %}
+                <li>
+                    <a href="{{ path("index_emailing") }}">
+                        <img class="arrows" src="{{ asset("/images/arrowgreen.png") }}"/>
+                        Emailing
+                    </a>
+                </li>
+            {% endif %}
                 </ul>
             </li>
             {% endif %}
