--- a/src/Sesile/ClasseurBundle/Resources/views/TypeClasseur/new.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/TypeClasseur/new.html.twig
@@ -62,12 +62,7 @@
 {% endblock %}
 
 {% block losjavascriptos %}
-    <script type="text/javascript" src="{{ asset("/bundles/sesileclasseur/js/newclasseur.js") }}">
-
-    </script>
-
-
-
+    <script type="text/javascript" src="{{ asset("/bundles/sesileclasseur/js/newclasseur.js") }}"></script>
 {% endblock %}
 
 
