--- a/src/Sesile/MainBundle/Resources/views/Default/index.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Default/index.html.twig
@@ -154,6 +154,7 @@
                                     processing: true,
                                     serverSide: true,
                                     ajax: "{{ path("ajax_a_valider") }}",
+                                    {#ajax: "{{ path("ajax_a_validertest") }}",#}
                                     oLanguage: {
                                         sSearch: "Rechercher&nbsp;",
                                         sInfo: "Classeur  _START_ &agrave; _END_ sur _TOTAL_",
