--- a/web/css/style.css
+++ b/web/css/style.css
@@ -519,7 +519,7 @@ select [name=user] {
 
 .form-horizontal .control-label{
 	text-align: left !important;
-	padding-top: 0em !important;
+	/*padding-top: 0em !important;*/
 }
 
 /*BOUTONS TABLEAU*/
@@ -554,6 +554,7 @@ select [name=user] {
 	position: absolute;
 	width: 50%;
 	left: 25%;
+    z-index: 1000;
 }
 .alert-info {
     margin-top: 53px;
@@ -779,4 +780,10 @@ select [name=user] {
 }
 .ui-widget-content a {
     color: #222222;
+}
+
+.link-datatable, .link-datatable:hover, .link-datatable:active {
+    text-decoration: none;
+    display: block;
+    color: rgba(109, 110, 112, 1);
 }
