--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/new.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/new.html.twig
@@ -9,23 +9,43 @@
         <br>
 
         <form id="new_classeur" class="form-horizontal" role="form" action="{{ path('classeur_create') }}" method="POST">
-            <div class="">
+            <div class="row">
                 <div class="col-md-12">
                     <div class="form-group">
-                        <label for="type" class="col-sm-2 control-label">Type</label>
+                        <!--
+                        <select id="type" name="type">
+                            <option value="Classique" selected>Divers</option>
+                            <option value="Helios">Hélios</option>
+                            <option value="Acte">Acte Budgétaire</option>
+                            <option value="Marchés">Marchés</option>
+                            <option value="Convocation">Convocation</option>
+                            <option value="Courrier AR">Courrier AR</option>
+                            <option value="Document Urba">Document Urba</option>
+                        </select>
+                        -->
 
-                        <div class="col-sm-10">
-                            <select id="type" name="type">
-                                <option value="Classique" selected>Divers</option>
-                                <option value="Helios">Hélios</option>
-                                <option value="Acte">Acte Budgétaire</option>
-                                <option value="Marchés">Marchés</option>
-                                <option value="Convocation">Convocation</option>
-                                <option value="Courrier AR">Courrier AR</option>
-                                <option value="Document Urba">Document Urba</option>
+                        <label for="type" class="col-lg-2 control-label">Groupe fonctionnel</label>
+
+                        <div class="col-lg-3">
+                            <select id="userGroupe" name="userGroupe" class="form-control">
+                                {% for userGroupe in userGroupes %}
+                                    <option value="{{ userGroupe.id }}" data-id="{{ userGroupe.id }}" data-ordre="{{ userGroupe.ordre }}">{{ userGroupe.name }}</option>
+                                {% endfor %}
                             </select>
+                        </div>
+
+                        <label for="type" class="col-lg-2 control-label">Type de classeur</label>
+
+                        <div class="col-lg-3" id="testgroupe">
+                            <select id="type" name="type" class="form-control">
+                            </select>
+                        </div>
+
+                        <div class="col-lg-1">
                             <img id="loadinggif" src="{{ asset("/bundles/sesilemain/img/load.gif") }}"/>
                         </div>
+
+
                     </div>
                 </div>
             </div>
