--- a/src/Sesile/UserBundle/Resources/views/Hierarchie/edit.html.twig
+++ b/src/Sesile/UserBundle/Resources/views/Hierarchie/edit.html.twig
@@ -12,8 +12,6 @@
     <link type="text/css" rel="stylesheet" href="{{ asset("/css/organigramme.css") }}"/>
 
 
-
-
     <div class="bloc_page">
 	<div class="titre_page">
 	    {% if organigramme is defined %}
@@ -28,13 +26,42 @@
 	    {% endif %}
 	</div>
 	{% include 'SesileUserBundle:Hierarchie:legende.organigramme.html.twig' %}
+
 	<form id="form_hierarchy" method="post" action="{% if groupe is defined %}{{ path("update_groupe") }} {% else %}{{ path("new_groupe") }} {% endif %}">
-	    <div id="edit_service">
-		{% if groupe is defined %}
-		    <input type="hidden" name="id" id="id_groupe" value="{% if groupe is defined %}{{ groupe.id }}{% endif %}"/>
-		{% endif %}
+        <div class="row">
+            <div class="col-lg-12 col-lg-push-1">
+                <h4>Choisir les types de classeur du groupe</h4>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-7 col-lg-push-1">
+                <div class="row">
+                    {% for type in form.types %}
+                    <div class="col-lg-4">
+                        <div class="checkbox">{{ form_widget(type) }}{{ form_label(type) }}</div>
+                    </div>
+                    {% endfor %}
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-lg-push-1">
+	        {#<div id="edit_service">#}
+                {% if groupe is defined %}
+                    <input type="hidden" name="id" id="id_groupe" value="{% if groupe is defined %}{{ groupe.id }}{% endif %}"/>
+                {% endif %}
+                Nom du groupe&nbsp;:&nbsp;
+                <input type="text" name="nom" class="form-control" id="nom_groupe"{% if groupe is defined %} value="{{ groupe.Nom }}" {% endif %}/>
+                &nbsp;&nbsp;
+
+                <button id="btn-envoyer" type="button" class="btn btn-success btn-envoyer sesiletooltip" data-original-title="Enregistrer">
+                    <span class="glyphicon glyphicon-ok" style="color: #ffffff"></span>
+                </button>
+            </div>
+        </div>
 		{% include 'SesileUserBundle:Hierarchie:tools.html.twig' %}
 	    <br>
+
+
 	    {% if groupe is defined %}
 		<script type="text/javascript">
 		    var treeData = {% if groupe.json %} {{ groupe.json | raw }} {% else %} "" {% endif %};
@@ -43,6 +70,7 @@
 	    <script src="{{ asset("/js/organigramme.js") }}"></script>
 
 	    <input type="hidden" name="tree" id="tree"/>
+
 	</form>
 
     </div>
@@ -57,5 +85,5 @@
 		$("#form_hierarchy").submit();
 	    });
 	});
-    </script>-
+    </script>
 {% endblock %}
