--- a/web/css/organigramme.css
+++ b/web/css/organigramme.css
@@ -8,7 +8,7 @@
 }
 
 .lesvg {
-
+    padding-left: 50px;
 }
 
 .node text {
@@ -44,7 +44,9 @@
 #type_groupe,
 #nom_groupe,
 #picker{
-	width: 25%;
+	/*width: 25%;*/
+    display: inline-block;
+    width: auto;
 }
 
 .glyphicon-star{
@@ -54,7 +56,8 @@
 /*********************************************** TOOLBAR *************************************************************/
 #form_hierarchy{
 	background: url("/images/vichy.png") repeat scroll 0 0 #FFFFFF;
-	height: 50px;
+	/*height: 50px;*/
+    height: auto;
 	border: 1px solid #ebebeb;
 	vertical-align: middle;
 	padding: 0.5% 0 0 0;
@@ -72,9 +75,9 @@
 #toolbar {
 	display: inline-block;
 	float: right;
-	width: 65%;
-	height: 35px;
-	padding: 5px 10px;
+	/*width: 65%;*/
+	/*height: 35px;*/
+	padding: 15px 0px 0px 0px;
 }
 
 .btn-envoyer {
