Résolutions de Bug : - 0002314 : editions de documents sur les classeurs - 0002344 : Menu type classeur, modification du tableau + BDD - 0002342: Filtrer les utilisateurs actif - 0002347 : Erreur ajax - 0002345 : Impossible de choisir un type de classeur

--- a/src/Sesile/CircuitBundle/Resources/views/Circuit/new.html.twig
+++ b/src/Sesile/CircuitBundle/Resources/views/Circuit/new.html.twig
@@ -6,7 +6,7 @@
             <label class="nametitle" id="users_complete">
                 <span class="glyphicon glyphicon-search"></span>
                 &nbsp;&nbsp;Utilisateurs&nbsp;&nbsp;</label>
-            <input class="nameinput" type="text" id="circuit-search">
+            <input class="nameinput" type="text" id="circuit-search" autocomplete="off">
         </div>
         <div id="users_list">
             {% for user in users %}
