--- a/src/Sesile/DocumentBundle/Resources/views/Document/show.html.twig
+++ b/src/Sesile/DocumentBundle/Resources/views/Document/show.html.twig
@@ -1,56 +1,5 @@
 <div class="row descriptionfichier">
 
-<script type="text/javascript">
-    var fNewDoc = false;
-    var EditDocumentButton = document.getElementById('modifbutton');
-    try {
-        EditDocumentButton = new ActiveXObject('SharePoint.OpenDocuments.3');
-        if (EditDocumentButton != null) {
-            fNewDoc = true;
-        }
-    } catch (e) {
-    }
-
-    var L_EditDocumentError_Text = "Editing not supported.";
-    var L_EditDocumentRuntimeError_Text = "Sorry, couldn't open the document.";
-
-    function editDocument(strDocument) {
-
-        if (fNewDoc) {
-            if (!EditDocumentButton.EditDocument(strDocument)) {
-                alert(L_EditDocumentRuntimeError_Text);
-            }
-        } else {
-            // try {
-            var hownowPlugin = document.getElementById("winFirefoxPlugin");
-            hownowPlugin.EditDocument(strDocument, null);
-            // } catch (e) { alert(L_EditDocumentError_Text); }
-        }
-    }
-
-
-    function showDocument(strDocument) {
-
-        if (fNewDoc) {
-            if (!EditDocumentButton.ViewDocument(strDocument)) {
-                alert(L_EditDocumentRuntimeError_Text);
-            }
-        } else {
-            // try {
-            var hownowPlugin = document.getElementById("winFirefoxPlugin");
-            hownowPlugin.ViewDocument(strDocument, null);
-
-        }
-
-    }
-
-    function fireDocument(strDocument) {
-        if (allowmodif) {
-            editDocument(strDocument);
-        }
-    }
-</script>
-
 <div class="col-md-5">
     <div class="thumbnail">
         <img id="fileimgpreview" style="width: 180px; height: 180px">
@@ -66,21 +15,29 @@
 
                     <!--Bouton Editer Visualiseur PES -->
 
-                    <!--  <a id='modifbutton' style="display: none" class="btn btn-primary" role="button" data-toggle="modal" data-target="#modifbutton"
+                    {#<a id='modifbutton' style="display: none" class="btn btn-primary" role="button" data-toggle="modal" data-target="#modifbutton"
                        data-whatever="@mdo" class=".bs-example-modal-lg"
                        onclick="javascript:fireDocument('http://{{ servername }}/server.php/{{ doc.repourl }}');return false;"
                        href="#"
                        class="btn btn-primary" role="button">
                         <span class="glyphicon glyphicon-pencil"></span>
                         Editer
-                    </a>-->
+                    </a>#}
+
+                    {% if isvalidant %}
+                        <a href="#" class="btn btn-primary" id="visubutton">
+                            <span class="glyphicon glyphicon-pencil"></span>
+                            Editer
+                        </a>
+                    {%  endif %}
 
 
-                    <a type="submit" class="btn btn-primary" role="button" data-toggle="modal" id='modifbutton'
+
+                    {#<a type="submit" class="btn btn-primary" role="button" data-toggle="modal" id='modifbutton'
                        data-whatever="@mdo" class=".bs-example-modal-lg">
                         <span class="glyphicon glyphicon-pencil"></span>
                         &nbsp;Editer
-                    </a>
+                    </a>#}
 
 
 
@@ -95,10 +52,12 @@
                 </a>&nbsp;
 
             {% endif %}
+            {% if isvalidant %}
             <button id='deleteconfirm' type="button" class="btn btn-danger dropdown-toggle" data-toggle="dropdown">
                 <span class="glyphicon glyphicon-trash"> </span>
                 Supprimer
             </button>
+            {% endif %}
 
         </div>
     </div>
@@ -150,8 +109,47 @@
             </div>
         </div>
     </div> #}
+</div>
 
 <script type="text/javascript">
+
+    {# Script pour l edition de document #}
+    var fNewDoc = false;
+    var EditDocumentButton = null;
+    try {
+        EditDocumentButton = new ActiveXObject('SharePoint.OpenDocuments.3');
+        if (EditDocumentButton != null) {
+            fNewDoc = true;
+        }
+    } catch (e) {}
+
+    var L_EditDocumentError_Text = "Editing not supported.";
+    var L_EditDocumentRuntimeError_Text = "Sorry, couldn't open the document.";
+    var hownowPlugin = document.getElementById("winFirefoxPlugin");
+    var version = hownowPlugin.GetOfficeVersion();
+
+    function editDocument(strDocument) {
+        if (fNewDoc) {
+            if (!EditDocumentButton.EditDocument(strDocument)) {
+                alert(L_EditDocumentRuntimeError_Text);
+            }
+        } else {
+            hownowPlugin.EditDocument(strDocument, version);
+        }
+    }
+
+
+    $('#visubutton').click(function(e) {
+        e.preventDefault();
+        editDocument('http://{{ servername }}/server.php/{{ doc.repourl }}');
+    });
+
+    // On supprime le bouton pour le plugin MS Ofice 2013
+    if(version == 15) {
+        $('#visubutton').css('display', 'none');
+    }
+    {# FIN du Script pour l edition de document #}
+
     $("#deleteconfirm").click(function (e) {
 
         if (confirm('Confirmez-vous la suppression du fichier ?')) {
